# frp_freedom_android

./: .env.example  .gitignore  MANIFEST.ini  README.md  android_app.py  android_config.py  flet_config.yaml  gen_assets.py  main.py  pyproject.toml  requirements.txt  setup_android.py  tree.txt  version.env
.flet/: properties
.flet/android/: build.gradle
.github/workflows/: build_apk.yml
adapters/: adb_adapter.py  filesystem_adapter.py  usb_adapter.py
core_android/: __init__.py  bypass_manager_android.py
frp_freedom_android/: __init__.py  __main__.py  android_app.py  android_config.py  platform_adapter.py  setup_android.py
frp_freedom_android/adapters/: __init__.py  filesystem_adapter.py  permissions_adapter.py
frp_freedom_android/assets/fonts/: README.txt
frp_freedom_android/core_android/: adb_exploits_android.py  device_manager_android.py  hardware_exploits_android.py  interface_exploits_android.py  logger_android.py  system_exploits_android.py
frp_freedom_android/models/: device_model.py
frp_freedom_android/tests/: conftest.py  test_adapters.py  test_bypass_manager.py  test_device_manager.py
frp_freedom_android/views/: device_view.py  execution_view.py  methods_view.py
scripts/: version.sh
views/: __init__.py  home_view.py  results_view.py
