[project]
name = "frp-freedom-android"
version = "1.0.0"
description = "FRP Freedom - Android APK for FRP Bypass"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "FRP Freedom Project" }]
dependencies = [
  "flet>=0.21.0",
  "jnius>=1.1.0",
  "pyyaml>=6.0",
  "cryptography>=41.0.0",
  "requests>=2.31.0",
]

[tool.uv.extra-build-dependencies]
jnius = ["Cython"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
frp-freedom = "frp_freedom_android.android_app:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
