[project]
name = "frp-freedom"
version = "1.0.0"                                        # FIX: Corregir la vercion estatica y utilizar vercio controlada por variable de entorno
description = "FRP Freedom - Android APK for FRP Bypass"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU" }
authors = [{ name = "FRP Freedom by Zeidel Garcia" }]

# Dependencias principales 
dependencies = [
  "flet>=0.21.0",
  "pyyaml>=6.0",
  "cryptography>=41.0.0",
  "requests>=2.31.0",
  "urllib3>=2.0.0",
  "msgpack<=1.1.1",
]

# Dependencias de desarrollo (opcionales)
[project.optional-dependencies]
dev = [
  "black>=23.7.0",
  "flake8>=6.0.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
]

# Scripts de entrada
[project.scripts]
frp-freedom = "main:main"

# Configuración de construcción
[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

# ============================================
# CONFIGURACIONES DE HERRAMIENTAS
# ============================================

# Configuración específica para Flet
[tool.flet]
# Deshabilitar dependencias opcionales de Android
android_dependencies = false
skip_android_deps = true
# Versión mínima de Android SDK
android_sdk_version = "36"
# Compresión de assets
asset_compression = true

# Configuración para el empaquetado de Android
[tool.flet.android]
# Evitar instalar dependencias problemáticas
skip_dependencies = ["jnius", "pyjnius", "kivy", "plyer"]
# Versión mínima de Android
min_sdk_version = 24
target_sdk_version = 36

# Configuración de Black (formateador de código)
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | frp_freedom_android/build
)/
'''

# Configuración de isort (orden de imports)
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["build", "dist", ".eggs", ".git", ".mypy_cache", ".tox", ".venv"]

# Configuración de Flake8 (linter)
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
  "build",
  "dist",
  ".eggs",
  ".git",
  ".mypy_cache",
  ".tox",
  ".venv",
  "__pycache__",
]

# Configuración de pytest (pruebas)
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
  "unit: Pruebas unitarias",
  "integration: Pruebas de integración",
  "slow: Pruebas lentas",
]

# Configuración de coverage (cobertura de código)
[tool.coverage.run]
source = ["frp_freedom_android", "."]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "*/build/*", "*/dist/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if False:",
]

# Configuración de mypy (type checking - opcional)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build/", "dist/", "tests/", "frp_freedom_android/build/"]

# Configuración para setuptools
[tool.setuptools]
packages = ["frp_freedom_android"]
include-package-data = true

[tool.setuptools.package-data]
frp_freedom_android = [
  "*.yaml",
  "*.yml",
  "*.json",
  "*.txt",
  "assets/**/*",
  "static/**/*",
]

# Configuración para wheels
[tool.wheel]
universal = false

# ============================================
# CONFIGURACIONES ADICIONALES
# ============================================

# Configuración para el empaquetado
[tool.distutils]
bdist_wheel = { universal = false }

# Metadatos adicionales para PyPI (opcional)
[project.urls]
Homepage = "https://github.com/yoelkyrodriguez840-cloud/frp_freedom_android"
Repository = "https://github.com/yoelkyrodriguez840-cloud/frp_freedom_android.git"
Issues = "https://github.com/yoelkyrodriguez840-cloud/frp_freedom_android/issues"

[project.classifiers]
Development_Status = "3 - Alpha"
Intended_Audience = "Developers"
Programming_Language = "Python :: 3.9"
Operating_System = "Android"
Topic = "FRP Bypass"
License = "GNU"
